feat: add swagger annotation and store post route
